--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -122,10 +122,10 @@
     </div>
 
     <!-- Garment Design -->
-    <div class="row justify-content-center mb-4 mb-sm-5">
+    <div class="row justify-content-center mb-4 mb-sm-5" id="showGarment">
       <div class="col">
         <h4 class="text-center">Garment Details</h4>
-        <div class="card" id="showGarmentDesktop">
+        <div class="card">
           <div class="card-body">
             <div class="table-responsive">
               <table class="table table-hover" id="garmentTable">
@@ -217,8 +217,32 @@
               <div class="d-flex justify-content-end mt-4">
                 <button class="btn btn-outline-danger me-2 detailButton" id="garmentDelete">Delete</button>
                 <button class="btn btn-outline-primary me-2 detailButton" id="garmentEdit">Edit</button>
-                <button class="btn btn-primary detailButton me-3" id="garmentAdd">Add</button>
+                <button class="btn btn-primary detailButton me-3" id="garmentAdd" data-bs-toggle="modal"
+                  data-bs-target="#garmentModal">Add</button>
               </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Other Design -->
+    <div class="row justify-content-center mb-4 mb-sm-5" id="showOther">
+      <div class="col">
+        <h4 class="text-center">Other Details</h4>
+        <div class="card">
+          <div class="card-body">
+            <label class="form-label" for="otherAmount">Number of Items</label>
+            <input class="form-control mb-3" type="number" value="1" min="1" name="otherAmount" id="otherAmount">
+
+            <label class="form-label" for="otherCostPerItem">Cost per Item</label>
+            <input class="form-control mb-3" type="number" min="0.00" step="0.01" placeholder="Example: 12.00"
+              name="otherCostPerItem" id="otherCostPerItem">
+
+            <div class="d-flex align-items-center">
+              <h6 class="mb-0">Total Cost: $</h6>
+              <h6 class="mb-0" id="otherTotalCost">12.00</h6>
             </div>
 
           </div>
@@ -241,13 +265,12 @@
 
             <div class="d-flex align-items-center">
               <h6 class="mb-0">Total Cost: $</h6>
-              <h6 class="mb-0" id="vinylizeTotalCost">12.00</h6>
+              <h6 class="mb-0" id="vinylizeTotalCost">0.00</h6>
             </div>
 
           </div>
         </div>
       </div>
-
     </div>
 
     <!-- Embroidery Details -->
@@ -262,115 +285,188 @@
 
             <label class="form-label">Thread Details & Machine Settings</label>
 
-            <div class="table-responsive">
-              <table class="table table-hover" id="embroideryTable">
-                <thead>
-                  <tr>
-                    <th scope="col">
-                      <div class="form-check d-flex justify-content-center">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckall">
-                      </div>
-                    </th>
-                    <th scope="col">
-                      <div class="d-flex justify-content-start ps-3">
-                        Thread ID
-                      </div>
-                    </th>
-                    <th scope="col">
-                      <div class="d-flex justify-content-start ps-3">
-                        Color
-                      </div>
-                    </th>
-                    <th scope="col">
-                      <div class="d-flex justify-content-start ps-3">
-                        Density
-                      </div>
-                    </th>
-                  </tr>
-                </thead>
-                <tbody class="table-group-divider">
-                  <tr>
-                    <th scope="row">
-                      <div class="form-check d-flex justify-content-center">
-                        <input class="form-check-input" type="checkbox" value="">
-                      </div>
-                    </th>
-                    <td>
-                      <div class="d-flex justify-content-start ps-3">
-                        Janome 450
-                      </div>
-                    </td>
-                    <td>
-                      <div class="d-flex justify-content-start ps-3">
-                        Red
-                      </div>
-                    </td>
-                    <td>
-                      <div class="d-flex justify-content-start ps-3">
-                        400
-                      </div>
-                    </td>
 
-                  </tr>
-                  <tr>
-                    <th scope="row">
-                      <div class="form-check d-flex justify-content-center">
-                        <input class="form-check-input" type="checkbox" value="">
-                      </div>
-                    </th>
-                    <td>
-                      <div class="d-flex justify-content-start ps-3">
-                      </div>
-                    </td>
-                    <td>
-                      <div class="d-flex justify-content-start ps-3">
-                      </div>
-                    </td>
-                    <td>
-                      <div class="d-flex justify-content-start ps-3">
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">
-                      <div class="form-check d-flex justify-content-center">
-                        <input class="form-check-input" type="checkbox" value="">
-                      </div>
-                    </th>
-                    <td>
-                      <div class="d-flex justify-content-start ps-3">
-                      </div>
-                    </td>
-                    <td>
-                      <div class="d-flex justify-content-start ps-3">
-                      </div>
-                    </td>
-                    <td>
-                      <div class="d-flex justify-content-start ps-3">
-                      </div>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-              <div class="d-flex justify-content-end mt-4">
-                <button class="btn btn-outline-danger me-2 detailButton" id="embroideryDelete">Delete</button>
-                <button class="btn btn-outline-primary me-2 detailButton" id="embroideryEdit">Edit</button>
-                <button class="btn btn-primary detailButton me-3" id="embroideryAdd">Add</button>
-              </div>
+            <table class="table table-hover" id="embroideryTable">
+              <thead>
+                <tr>
+                  <th scope="col">
+                    <div class="form-check d-flex justify-content-center">
+                      <input class="form-check-input" type="checkbox" value="" id="flexCheckall">
+                    </div>
+                  </th>
+                  <th scope="col">
+                    <div class="d-flex justify-content-start ps-3">
+                      Thread ID
+                    </div>
+                  </th>
+                  <th scope="col">
+                    <div class="d-flex justify-content-start ps-3">
+                      Color
+                    </div>
+                  </th>
+                  <th scope="col">
+                    <div class="d-flex justify-content-start ps-3">
+                      Density
+                    </div>
+                  </th>
+                </tr>
+              </thead>
+              <tbody class="table-group-divider">
+                <tr>
+                  <th scope="row">
+                    <div class="form-check d-flex justify-content-center">
+                      <input class="form-check-input" type="checkbox" value="">
+                    </div>
+                  </th>
+                  <td>
+                    <div class="d-flex justify-content-start ps-3">
+                      Janome 450
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-start ps-3">
+                      Red
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-start ps-3">
+                      400
+                    </div>
+                  </td>
 
-              <label class="form-label" for="embroideryCostPerItem">Cost per Item</label>
-              <input class="form-control mb-3" type="number" min="0.00" step="0.01" placeholder="Example: 12.00"
-                name="embroideryCostPerItem" id="embroideryCostPerItem">
-
-              <div class="d-flex align-items-center">
-                <h6 class="mb-0">Total Cost: $</h6>
-                <h6 class="mb-0" id="embroideryTotalCost">12.00</h6>
-              </div>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="form-check d-flex justify-content-center">
+                      <input class="form-check-input" type="checkbox" value="">
+                    </div>
+                  </th>
+                  <td>
+                    <div class="d-flex justify-content-start ps-3">
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-start ps-3">
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-start ps-3">
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="form-check d-flex justify-content-center">
+                      <input class="form-check-input" type="checkbox" value="">
+                    </div>
+                  </th>
+                  <td>
+                    <div class="d-flex justify-content-start ps-3">
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-start ps-3">
+                    </div>
+                  </td>
+                  <td>
+                    <div class="d-flex justify-content-start ps-3">
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="d-flex justify-content-end mt-4">
+              <button class="btn btn-outline-danger me-2 detailButton" id="embroideryDelete">Delete</button>
+              <button class="btn btn-outline-primary me-2 detailButton" id="embroideryEdit">Edit</button>
+              <button class="btn btn-primary detailButton me-3" id="embroideryAdd">Add</button>
             </div>
+
+            <label class="form-label" for="embroideryCostPerItem">Cost per Item</label>
+            <input class="form-control mb-3" type="number" min="0.00" step="0.01" placeholder="Example: 12.00"
+              name="embroideryCostPerItem" id="embroideryCostPerItem">
+
+            <div class="d-flex align-items-center">
+              <h6 class="mb-0">Total Cost: $</h6>
+              <h6 class="mb-0" id="embroideryTotalCost">0.00</h6>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" data-bs-backdrop="static" id="garmentModal" tabindex="-1" aria-labelledby="garmentModal"
+    aria-hidden="true">
+
+    <!-- Vertically centered scrollable modal -->
+    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Add/Edit Garment</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row justify-content-center mb-4 mb-sm-5">
+            <div class="col">
+
+              <label class="form-label" for="garmentStyleNumber">Style Number</label>
+              <input class="form-control mb-3" type="text" name="garmentStyleNumber" id="garmentStyleNumber"
+                placeholder="Example: 64000B">
+
+              <label class="form-label" for="garmentColor">Color</label>
+              <input class="form-control mb-3" type="text" name="garmentColor" id="garmentColor"
+                placeholder="Example: Black">
+
+              <label class="form-label">Gender/Age</label>
+              <select class="form-control mb-3" id="garmentAgeGender" name="garmentAgeGender">
+                <option disabled selected value> -- select an option -- </option>
+                <option value="Adult/Men">Adult/Men</option>
+                <option value="Ladies/Women">Ladies/Women</option>
+                <option value="Youth">Youth</option>
+                <option value="Infant/Toddler">Infant/Toddler</option>
+              </select>
+
+              <label class="form-label">Size</label>
+              <select onfocus='this.size=3;' onblur='this.size=1;' onchange='this.size=1; this.blur();'
+                class="form-control mb-3" id="garmentSize" name="garmentSize">
+                <option disabled selected value> -- select an option -- </option>
+                <option value="XS">XS</option>
+                <option value="S">S</option>
+                <option value="M">M</option>
+                <option value="L">L</option>
+                <option value="XL">XL</option>
+                <option value="2XL">2XL</option>
+                <option value="3XL">3XL</option>
+                <option value="4XL">4XL</option>
+
+              </select>
+
+              <label class="form-label" for="garmentQuantity">Quantity</label>
+              <input class="form-control mb-3" type="number" value="1" min="1" name="garmentQuantity"
+                id="garmentQuantity" placeholder="Example: 1">
+
+              <label class="form-label" for="garmentCostPerItem">Cost Per Item</label>
+              <input class="form-control mb-3" type="number" min="0.00" step="0.01" placeholder="Example: 12.00"
+                name="garmentCostPerItem" id="garmentCostPerItem">
+
+              <div class="d-flex align-items-center">
+                <h6 class="mb-0">Total Cost: $</h6>
+                <h6 class="mb-0" id="garmentTotalCost">0.00</h6>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
 
