Move Tests to the Modal and add Alerts

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -431,6 +431,17 @@
             </div>
           </div>
 
+          <div id="alertPlaceholder"></div>
+          <div class="row justify-content-center mb-4 mb-sm-5">
+            <div class="col">
+              <div class="d-flex justify-content-center mt-4" id="testButtons">
+                <button class="btn btn-outline-danger me-2">Test 1</button>
+                <button class="btn btn-outline-primary me-2">Test 2</button>
+                <button class="btn btn-primary me-3">Test 3</button>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="modal-footer">
           <button class="btn design-selector">
@@ -455,17 +466,6 @@
           </button>
 
         </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="row justify-content-center mb-4 mb-sm-5">
-    <div class="col">
-      <div class="d-flex justify-content-end mt-4" id="testButtons">
-        <button class="btn btn-outline-danger me-2">Test 1</button>
-        <button class="btn btn-outline-primary me-2">Test 2</button>
-        <button class="btn btn-primary me-3">Test 3</button>
       </div>
     </div>
   </div>
