--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -379,14 +379,27 @@
         <div class="modal-body">
           <div class="row justify-content-center">
             <div class="col">
-
+              <div id="alertPlaceholder">
+                <div class="alert alert-primary d-flex align-items-center" role="alert">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                    class="bi bi-info-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                    <path
+                      d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                  </svg>
+                  <div class="ms-2">
+                    Here is our alert text
+                  </div>
+                  <button type="button" class="btn-close ms-auto" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+              </div>
               <label class="form-label" for="garmentStyleNumber">Style Number</label>
               <input class="form-control mb-3" type="text" name="garmentStyleNumber" id="garmentStyleNumber"
-                placeholder="Example: 64000B">
+                placeholder="Example: 64000B" required>
 
               <label class="form-label" for="garmentColor">Color</label>
               <input class="form-control mb-3" type="text" name="garmentColor" id="garmentColor"
-                placeholder="Example: Black">
+                placeholder="Example: Black" required>
 
               <label class="form-label">Gender/Age</label>
               <select class="form-control mb-3" id="garmentAgeGender" name="garmentAgeGender">
@@ -398,7 +411,7 @@
               </select>
 
               <label class="form-label">Size</label>
-              <select class="form-control mb-3" id="garmentSize" name="garmentSize">
+              <select class="form-control mb-3" id="garmentSize" name="garmentSize" required>
                 <option disabled selected value> -- select an option -- </option>
                 <option value="XS">XS</option>
                 <option value="S">S</option>
@@ -416,8 +429,8 @@
                 id="garmentQuantity" placeholder="Example: 1">
 
               <label class="form-label" for="garmentCostPerItem">Cost Per Item</label>
-              <input class="form-control mb-3" type="number" min="0.00" step="0.01" placeholder="Example: 12.00"
-                name="garmentCostPerItem" id="garmentCostPerItem">
+              <input class="form-control mb-3" type="number" min="0.00" step="0.01" placeholder="Example: $8.00"
+                name="garmentCostPerItem" id="garmentCostPerItem" required>
 
               <hr>
 
@@ -431,7 +444,7 @@
             </div>
           </div>
 
-          <div id="alertPlaceholder"></div>
+
           <div class="row justify-content-center mb-4 mb-sm-5">
             <div class="col">
               <div class="d-flex justify-content-center mt-4" id="testButtons">
