clear inputs on modal exit

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -374,7 +374,8 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Add/Edit Garment</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close modal-close" data-bs-dismiss="modal" aria-label="Close"
+            id="modal-close"></button>
         </div>
         <div class="modal-body">
           <div class="row justify-content-center">
@@ -453,7 +454,8 @@
           </button>
 
           <div class="d-flex justify-content-center">
-            <button type="button" class="btn btn-outline-secondary me-1" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-outline-secondary modal-close me-1"
+              data-bs-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary ms-1" id="saveGarmentModal">Save</button>
           </div>
 
