--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -417,7 +417,7 @@
                 id="garmentQuantity" placeholder="Example: 1">
 
               <label class="form-label" for="garmentCostPerItem">Cost Per Item</label>
-              <input class="form-control mb-3" type="number" min="0.00" step="0.01" placeholder="Example: $8.00"
+              <input class="form-control mb-3" type="text" min="0.00" step="0.01" placeholder="Example: $8.00"
                 name="garmentCostPerItem" id="garmentCostPerItem" required>
 
               <hr>
