Test DB Security

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -257,6 +257,40 @@
         </div>
       </div>
 
+      <div class="col-xxl-3 col-lg-4 col-md-6">
+        <div class="card order-card mb-4">
+          <div class="card-body">
+            <h5 class="card-title">CHS Band</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
+            <hr>
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Due Date</div>
+                </div>
+                10/6/2023
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Total Items</div>
+                </div>
+                <span class="fw-semibold ">14</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Status</div>
+                </div>
+                <span class="badge bg-success rounded-pill">Ready</span>
+              </li>
+            </ul>
+            <hr>
+            <div class="d-flex justify-content-center">
+              <img src="assets/DynamicImageHandler.png" class="card-img-bottom" alt="sweatshirt asset">
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
 
   </div>
